Updated auth server with keystore

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-#security.oauth2.authorization.jwt.key-store=proteck-security.jks
-#security.oauth2.authorization.jwt.key-store-password=letmein
-#security.oauth2.authorization.jwt.key-alias=proteck-ui
-#security.oauth2.authorization.jwt.key-password=changeme
+#security.oauth2.authorization.jwt.key-store=classpath:anansemind.jks
+#security.oauth2.authorization.jwt.key-store-password=macintosh
+#security.oauth2.authorization.jwt.key-alias=anansemind
+#security.oauth2.authorization.jwt.key-password=macintosh
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
