--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
-#security.oauth2.authorization.jwt.key-store=classpath:anansemind.jks
-#security.oauth2.authorization.jwt.key-store-password=macintosh
-#security.oauth2.authorization.jwt.key-alias=anansemind
-#security.oauth2.authorization.jwt.key-password=macintosh
+security.oauth2.authorization.jwt.key-store=classpath:anansemind.jks
+security.oauth2.authorization.jwt.key-store-password=macintosh
+security.oauth2.authorization.jwt.key-alias=anansemind
+security.oauth2.authorization.jwt.key-password=macintosh
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+#==== connect to mysql ======#
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/proteckqr_security?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=Fp&tC?<U/&6j3Ehs
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
